Fix get club and support event only
